--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "build" : "netlify-lambda build",
+    "start": "netlify-lambda serve"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
+    "netlify-lambda": "^2.0.16",
     "nodemon": "^3.0.3"
   }
 }
