--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
 [build]
-  command = "npm run build"
-  publish = "./"
+  command = "echo 'Deploying functions'"
+  functions = "functions"
+  publish = "dist" 
