--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "netlify-lambda build",
-    "start": "netlify-lambda serve"
+    "build": "echo 'No build step required for serverless functions'",
+    "start": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
     "netlify-lambda": "^2.0.16",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "serverless-http": "^3.2.0"
   }
 }
